# SuperDashboard

./: .env.example  .gitignore  ARCHITECTURE_UPDATE.md  CLAUDE.md  COMMAND_PALETTE_IMPLEMENTATION.md  Dockerfile  GRID_SYSTEM.md  IMPLEMENTATION_COMPLETE.md  LICENSE  NOTIFICATION_CENTER_IMPLEMENTATION.md  PLUGIN_BADGE_SCHEMA.md  PLUGIN_COMMANDS_SCHEMA.md  PLUGIN_COMMAND_IMPLEMENTATION.md  PLUGIN_MANIFEST_SCHEMA.md  README.md  SETUP.md  SNIPPET_MANAGER_IMPLEMENTATION.md  docker-compose.yml
.claude/: ralph-loop.local.md  settings.json  settings.local.json
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml  restart-servers.sh  start-servers.sh  stop-servers.sh
backend/: .env.example  config.py  database.py  logger.py  main.py  main.py.backup  migrate_tasks.py  pyproject.toml  requirements.txt  services.py
frontend/: .env.example  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.jsx  config.js  index.css
frontend/src/components/: ChatInput.jsx  ChatMessage.jsx  MCPSettings.jsx  ModelSelector.jsx  SuiteSelector.jsx  Toast.jsx  TypingIndicator.jsx
frontend/src/plugins/: ai-agent  ai-email  code-review  command-palette  dashboard  dns-api-monitor  interview-assistant  jira  moltbook  notification-center  pomodoro  rss-reader  snippet-manager  tasks  whatsapp  workflow-engine
plugins/: config.js
plugins/ai-email/: plugin.json
plugins/ai-email/backend/: main.py
plugins/ai-email/frontend/: AIEmail.jsx
plugins/calculator/: main.py
plugins/calendar/: plugin.json
plugins/calendar/backend/: main.py  models.py
plugins/calendar/frontend/: Calendar.jsx
plugins/code-review/: IMPLEMENTATION_SUMMARY.md  README.md  plugin.json  pre-commit-hook.sh  test-plugin.sh
plugins/code-review/backend/: main.py
plugins/code-review/frontend/: CodeReview.jsx
plugins/command-palette/: README.md  plugin.json
plugins/command-palette/backend/: main.py
plugins/command-palette/frontend/: CommandPalette.jsx
plugins/core/ai-agent/: plugin.json
plugins/core/dashboard/: plugin.json
plugins/core/tasks/: plugin.json
plugins/dns-api-monitor/: README.md  plugin.json
plugins/dns-api-monitor/backend/: database.py  main.py
plugins/dns-api-monitor/frontend/: MonitorDashboard.jsx
plugins/interview-assistant/: plugin.json
plugins/interview-assistant/backend/: main.py
plugins/interview-assistant/frontend/: InterviewAssistant.jsx
plugins/jira/: plugin.json
plugins/jira/backend/: main.py
plugins/jira/frontend/: JiraTasks.jsx
plugins/moltbook/: plugin.json
plugins/moltbook/backend/: main.py
plugins/moltbook/frontend/: MoltbookFeed.jsx
plugins/notification-center/: README.md  plugin.json
plugins/notification-center/backend/: database.py  main.py
plugins/notification-center/frontend/: NotificationCenter.jsx  NotificationCenter.jsx.bak
plugins/pomodoro/: plugin.json
plugins/pomodoro/backend/: database.py  main.py  models.py
plugins/pomodoro/frontend/: PomodoroSidebarWidget.jsx  PomodoroTimer.jsx
plugins/rss-reader/: README.md  plugin.json
plugins/rss-reader/backend/: database.py  main.py  models.py
plugins/rss-reader/frontend/: RSSReader.jsx
plugins/shared/: database.py
plugins/snippet-manager/: README.md  plugin.json
plugins/snippet-manager/backend/: main.py
plugins/whatsapp/: QUICKSTART.md  README.md  plugin.json
plugins/workflow-engine/: LIBRARIES.md  README.md  plugin.json
scripts/: setup-dev.sh
(+73 files in other folders)
